<?xml version="1.0" encoding="utf-8"?>
<!-- 2019-02-01 K.OHWADA -->
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jp.ohwada.android.csv1.MainActivity">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

   <Button
        android:id="@+id/Button_1"
        android:text="@string/button_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp" />

   <Button
        android:id="@+id/Button_2"
        android:text="@string/button_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp" />

   <Button
        android:id="@+id/Button_3"
        android:text="@string/button_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp" />


   <Button
        android:id="@+id/Button_4"
        android:text="@string/button_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp" />


   <Button
        android:id="@+id/Button_5"
        android:text="@string/button_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp" />

   <Button
        android:id="@+id/Button_6"
        android:text="@string/button_6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp" />

   <Button
        android:id="@+id/Button_7"
        android:text="@string/button_7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp" />

   <Button
        android:id="@+id/Button_8"
        android:text="@string/button_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp" />

   <Button
        android:id="@+id/Button_9"
        android:text="@string/button_9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp" />

   <Button
        android:id="@+id/Button_10"
        android:text="@string/button_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp" />

</LinearLayout>

</ScrollView>

</LinearLayout>
